fix: highlight banner 1:1 aspect ratio, feature column mobile gap, reduce service banner mobile padding

--- a/src/components/HighlightBanner.module.css
+++ b/src/components/HighlightBanner.module.css
@@ -13,9 +13,6 @@
   align-items: stretch;
   width: 100%;
   max-width: 80%;
-  minHeight: 660px;
-  height: 85vh;
-  maxHeight: 750px;
   background-color: #fff;
   font-family: 'Helvetica Neue', Arial, sans-serif;
   overflow: hidden;
@@ -27,7 +24,7 @@
   flex: 1 1 50%;
   position: relative;
   height: 100%;
-  min-height: 600px;
+  aspect-ratio: 1 / 1;
 }
 
 .image {
@@ -126,14 +123,12 @@
   .container {
     flex-direction: column;
     max-width: 100%;
-    height: auto;
-    min-height: unset;
-    max-height: none;
   }
 
   .imageContainer {
     flex: 0 0 auto;
     width: 100%;
+    height: auto;
     aspect-ratio: 1 / 1;
     min-height: unset;
   }
